# TicTacToe

./: CMakeLists.txt  README.md
TicTacToe/: CMakeLists.txt  main.cpp  main.qml
TicTacToeLib/: CMakeLists.txt  Cell.qml  Theme.qml  TicTacToe.qml  TicTacToe.qrc  TicTacToeLib.hpp  qmldir
