project(TicTacToeProject)

set(CMAKE_CXX_STANDARD 17)
cmake_minimum_required(VERSION 3.16.3)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Bin/Lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Bin/Lib)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/TicTacToeLib)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/TicTacToe)
